--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-dinky
+#theme: jekyll-theme-dinky
+remote_theme: artemsheludko/flexible-jekyll
 title: Leticia Cecilia Cagnina
 description: About Me
