--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 #theme: jekyll-theme-dinky
 remote_theme: artemsheludko/flexible-jekyll
-title: Leticia Cecilia Cagnina
-description: About Me
+#title: Leticia Cecilia Cagnina
+#description: About Me
